# cargo-teeny

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: cli.rs  main.rs  profiles.rs  workspace.rs
src/commands/: build.rs  mod.rs  sysroot.rs
